   * is.RStudio - checks if the current R session is running within RStudio or not.
   * is.Rgui - checks if the current R session is running within Rgui or not.
   * add.installr.GUI and remove.installr.GUI - for adding a menu system to Rgui

UPDATED FUNCTIONS:
   * install.URL - 
      * added a "wait" parameter with default as F (it now means that R doesn't wait for the installation of the software to finish before it releases the console).  And also "..." with access to the shell command run.
      * Made sure that if keep_install_file = FALSE then wait= TRUE (since otherwise, we'll erase the file before we get to run it)
      * output now returns TRUE/FLASE on whether the installation worked or not.
   * install.?? - now returns TRUE/FLASE on whether to installation worked or not.
   * install.R - Now uses MD5sums to check the newly installed R has all of the files it should.
   * updateR - 
      * added a menu based GUI!
      * added setInternet2(TRUE) for when updating packages (to help it work with specification of proxies, etc.). (this seems to be safe for regular users - but I hope it won't cause new problems.).  Thanks to a bug report by Gilbert Pétain-Coup.
      * now checks if R was installed or not (Based on the output of install.R), and removed the need to ask the user that.
   * ask.user.yn.question - added a menu based GUI.
   * check.for.updates.R - added a menu based GUI.


BUG FIXES:
   * Fixed a bug in updateR, to make sure it will be able to open the new Rgui, and also close the old R.
   * Fixed a bug in updateR, "Error in !install_R : 'install_R' is missing" (install_R was called in too early) (thanks to AC for the bug report!)


installR 0.8
------------

FIXES FOR CRAN SUBMISSION:
   * Fixed some spelling mistakes in DESCRIPTION,
   * Made sure to run the checks in the latest R version (R 2.15.3, oh the irony)
   * Changed update.R to be called updateR (in order to avoid confusing it as an S3 variation to 'update')

