@@ -6,6 +6,7 @@ export(file.name.from.url)
 export(get.installed.R.folders)
 export(install.git)
 export(install.GitHub)
+export(install.ImageMagick)
 export(install.MikTeX)
 export(install.packages.zip)
 export(install.pandoc)
